kube/components/netmaker-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netmaker-api
  labels:
    app: netmaker-api
spec:
  selector:
    matchLabels:
      app: netmaker-api
  replicas: 1
  template:
    metadata:
      labels:
        app: netmaker-api
    spec:
      containers:
      - name: netmaker-api
        image: gravitl/netmaker:v0.5.7
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: nm-pvc
          mountPath: /root/config/dnsconfig
      volumes:
      - name: nm-pvc
        persistentVolumeClaim:
          claimName: nm-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netmaker-api
  name: netmaker-api
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: netmaker-api
  sessionAffinity: None
  type: ClusterIP
