kube/components/netmaker-grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netmaker-grpc
  labels:
    app: netmaker-grpc
spec:
  selector:
    matchLabels:
      app: netmaker-grpc
  replicas: 1
  template:
    metadata:
      labels:
        app: netmaker-grpc
    spec:
      containers:
      - name: netmaker-grpc
        image: gravitl/netmaker:v0.5.7
        ports:
        - containerPort: 443
        volumeMounts:
        - name: nm-pvc
          mountPath: /root/dnsconfig
      volumes:
      - name: nm-pvc
        persistentVolumeClaim:
          claimName: nm-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netmaker-grpc
  name: netmaker-grpc
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: netmaker-grpc
  sessionAffinity: None
  type: ClusterIP
