kube/components/netmaker-ingress-frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "traefik"
    kubernetes.io/ingress.allow-http: "false"    
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    cert-manager.io/cluster-issuer: wildcard-issuer
  name: nm-ui-ingress
  namespace: netmaker
spec:
  rules:
  - host: dashboard.NETMAKER_BASE_DOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: netmaker-ui
          servicePort: 80
  tls:
  - hosts: 
    - dashboard.NETMAKER_BASE_DOMAIN
    secretName: cert-nm-ui
