kube/components/nm-ingress-grpc-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nm-grpc-ingress-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - grpc.NETMAKER_BASE_DOMAIN
    secretName: nm-grpc-tls-2
  rules:
  - host: grpc.NETMAKER_BASE_DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netmaker-grpc
            port:
              number: 443
